--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,7 @@
     padding-left: 38%;
 }
 .organizationLogo{
-    height: 5%;
+    height: 70px;
     width:10%;
 }
 .organizationName{
@@ -14,4 +14,23 @@
 .link{
     color: black;
     text-decoration: none;
+}
+
+.upload-file-box{
+    
+    font-size: 16px;
+    margin-bottom: 10px;
+    width: 300px;
+    outline: none;
+}
+
+::-webkit-file-upload-button{
+    color: white;
+    background: #333996;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px black;
+    overflow: none;
+}
+::-webkit-file-upload-button:hover{
+    background-color: #3c53ca;
 }
